Contrast fixed

--- a/style.css
+++ b/style.css
@@ -647,11 +647,17 @@ h5,
 h6,
 p,
 label,
-.btn,
-{
+.btn
+ {
     font-family: "helvetica";
     font-weight: 400;
     color: #575757!important;
+}
+
+a {
+    color: #000;
+    font-family: "helvetica";
+    font-weight: 400;
 }
 
 .container {
@@ -739,6 +745,10 @@ h4 {
     color: #FFFFFF!important;
 }
 
+.black {
+    color: #000!important;
+}
+
 .portfolio-thumb {
     margin-bottom: 24px;
 }
@@ -767,6 +777,7 @@ h4 {
 }
 
 .bgc-dark-slate-blue {
+    /*background-color: #364577;*/
     background-color: #000;
 }
 
@@ -785,7 +796,7 @@ h4 {
 
 .btn-atomic-tangerine:hover {
     background: #c27956!important;
-    color: #222222!important;
+    color: #000!important;
 }
 
 .ltc-white {
@@ -825,22 +836,16 @@ h4 {
     background-image: url("img/image-de-presentation.bmp");
 }
 
-/*##### SEO + ACCESS #####*/
-.quote{
+.quote {
     font-size: 20px;
     font-style: italic;
     color: #575757;
 }
-.quote__name{
+
+.quote__name {
     font-size: 14px;
 }
-.black{
-    color: #000;
-}
-a{
-    color: black;
-}
-/*##### SEO + ACCESS #####*/
+
 @media (max-width: 1024px) {
     .bloc {
         padding-left: 20px;
@@ -1043,6 +1048,7 @@ a{
         height: 320px;
     }
 }
+
 
 @media (max-width: 400px) {
     .bloc {
